# browser_rnd

./: .gitignore  Cargo.toml  README.md
collector/: index.html
docs/: dart-flutter-random.md  hermes-math-random.md  v8-math-random.md
samples/: README.md  chrome100_win10.txt  chrome20.txt  chrome32.txt  chrome38.txt  chrome42.txt  ff1.txt  firefox100.txt  firefox24.txt  firefox50.txt  ie11.txt  ie7.txt  ie7_vista.txt  ie8.txt  opera100.txt  opera16.txt  opera40.txt  opera42.txt  vivaldi1.0.txt
samples/brave/: brave1.0.txt
samples/chrome/: chrome1-2008.txt  chrome10.txt  chrome100-android6.txt  chrome28.txt  chrome30.txt  chrome33.txt  chrome35.txt  chrome40.txt  chrome45.txt  chrome46.txt  chrome48.txt  chrome49.txt  chrome50.txt  chrome52.txt  chrome53.txt  chrome77-android4.4.txt
samples/dart/: dart-seed0x12345678.txt  dart-seed12345.txt
samples/edge/: edge100.txt
samples/firefox/: firefox26.txt  firefox28-linux.txt  firefox3.txt
samples/hermes/: hermes-lcg-seed0x12345678.txt  hermes-mt-seed0x123456789abcdef0.txt
samples/ie/: ie10.txt  ie6-twice-winxp.txt  ie6-winxp.txt  ie8-vista.txt  ie9-vista.txt
samples/mypal/: mypal68.txt
samples/opera/: opera10.50.txt  opera10.txt  opera11.60.txt  opera38.txt  opera40-recap.txt  opera70.txt  opera75.txt
samples/safari/: safari5.1.7-winxp.txt
samples/v8/: opera22.txt
src/: analyze.rs  gf2.rs  lib.rs  main.rs  predict.rs  sample.rs
src/engines/: dart.rs  hermes.rs  jsc.rs  jscript.rs  mod.rs  presto.rs  spidermonkey.rs  spidermonkey_legacy.rs  v8.rs  (+2 more)
tests/: fixtures.rs  predict.rs  recover.rs
(+3 files in other folders)
