[package]
name = "browser_rnd"
version = "0.1.0"
edition = "2021"
default-run = "browser_rnd"
description = "Analyze, reproduce, reverse engineer and brute force browser Math.random() PRNGs"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
